==> mtguerreiro/mqtt_manager/demo/pico/tasks/task_blink.c <==
/*
 * blink.c
 *
 *  Created on: 23.05.2022
 *      Author: Marco Guerreiro
 */

//=============================================================================
/*-------------------------------- Includes ---------------------------------*/
//=============================================================================
#include "task_blink.h"

/* Kernel */
#include "FreeRTOS.h"
#include "task.h"

/* Device and drivers */
#include "pico/stdlib.h"

//=============================================================================

//=============================================================================
/*--------------------------------- Defines ---------------------------------*/
//=============================================================================
#define TASK_BLINK_LED   PICO_DEFAULT_LED_PIN

typedef struct{
    /* Blink period */
    uint32_t period;
} blinkControl_t;
//=============================================================================

//=============================================================================
/*--------------------------------- Globals ---------------------------------*/
//=============================================================================
/* Task control structure */
blinkControl_t xblinkControl;
//=============================================================================

//=============================================================================
/*-------------------------------- Prototypes -------------------------------*/
//=============================================================================
static void taskBlinkInitialize(void);
static void taskBlinkToggle(void);
//=============================================================================

//=============================================================================
/*---------------------------------- Task -----------------------------------*/
//=============================================================================
//-----------------------------------------------------------------------------
void taskBlink(void *param){

    (void)param;

    taskBlinkInitialize();

    while(1){
        taskBlinkToggle();
        vTaskDelay(xblinkControl.period);
    }
}
//-----------------------------------------------------------------------------
void taskBlinkUpdatePeriod(uint32_t periodms){

    xblinkControl.period = periodms / portTICK_PERIOD_MS;
}
//-----------------------------------------------------------------------------
//=============================================================================

//=============================================================================
/*---------------------------- Static functions -----------------------------*/
//=============================================================================
//-----------------------------------------------------------------------------
static void taskBlinkInitialize(void){

    gpio_init(TASK_BLINK_LED);
    gpio_set_dir(TASK_BLINK_LED, GPIO_OUT);

    /* Sets default blinking period */
    xblinkControl.period = TASK_BLINK_CONFIG_DEFAULT_PERIOD_MS / portTICK_PERIOD_MS;
}
//-----------------------------------------------------------------------------
static void taskBlinkToggle(void){

    gpio_xor_mask(1 << TASK_BLINK_LED);
}
//-----------------------------------------------------------------------------
//=============================================================================
